--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="Learning Css language" />
+        <meta name="description" content="Learning Html&Css" />
         <link rel="stylesheet" href="css/interests box .css" />
         <link rel="stylesheet" href="css/all.min.css">
-        <title>CSS Course</title>
+        <title>Interests Box</title>
     </head>
     <body>
         <div class="container">
